# freetype-opengl-experiments

./: CMakeLists.txt
assets/arbic/: asd.txt  readme
assets/ch/: asd.txt
assets/japan/: asd.txt
assets/korean/: asd.txt
assets/latin/: asd.txt
assets/russ/: asd.txt
assets/thai/: asd.txt
src/: constants.h  face_collection.cc  face_collection.h  main.cc  renderer.cc  renderer.h  shaping_cache.h  state.cc  state.h  texture_atlas.cc  texture_atlas.h
src/dir/: Character.cpp  Character.h  CharacterCache.cpp  CharacterCache.h  ErrorCode.h  Face.cpp  Face.h  FaceCollection.cpp  FaceCollection.h  Renderer.cpp  Renderer.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  TextDirection.h  TextLanguage.h  Util.cpp  Util.h
